JG-2003-07-02-0: Bugfix:    NSLOTS and NHOSTS incorrectly set in environment
                            of tightly integrated tasks
                 Bugtraq:   4885906
                 Issue:     578
                 Review:    EB
                 Changed:   sge_execd

JG-2003-07-09-0: Bugfix:    Slave tasks of tightly integrated parallel jobs 
                            exceeding wall clock time were not killed.
                 Bugtraq:   4881949
                 Issue:     575
                 Review:    EB
                 Changed:   sge_execd

SG-2003-07-03-0: Bugfix:    max_u_jobs could count too many jobs

                            The sge_add_job had multiple exits after the 
                            max_u_job counter was increased. This was fixed. 
                            For some reason, this feature was disabled in the 
                            maintrunk.  I enabled it.
                 Bugtrag:   4886026
                 Issue:     576
                 Review:    AS
                 Changed:   qmaster
EB-2003-07-01-0: Bugfix:    SGEEE: qmaster crashed on qdel of tightly
                            integrated parallel job
                 Bugtraq:   4883714
                 Issue:     572
                 Review:    JG, (AS)
                 Changed:   sge_qmaster

CR-2003-06-30-1: Testsuite: qevent -ts option was not working for sge system
                 Changed:   qevent

AH-2003-06-30-0: Bugfix:    Fixed bug "sge_schedd dies...".
                 Issue:     545
                 Bugtraq:   4859658
                 Review:    EB

CR-2003-06-30-0: Testsuite: fixed aftereffect in test for IZ 509. Enhancments
                            in submit_job() procedure caused unexpected error
                            when testing -t option with invalid range 
                            specification.

AD-2003-06-25-1: Bugfix:    spool_flatfile_open_file(): Changed size
                            of buffer for tmp filename from L_tmpnam