@@ -58,13 +58,6 @@ void job_ja_task_send_abort_mail(const lListElem *job,
                                  const lListElem *ja_task,                                                       const char *ruser,
                                  const char *rhost,                                                              const char *err_str);
 
-void get_rid_of_job_due_to_report(lListElem *j,
-                                  lListElem *t,
-                                  lList **answer_list,
-                                  sge_pack_buffer *pb,
-                                  char *pb_host,
-                                  char *commproc);
-
 void get_rid_of_job_due_to_qdel(lListElem *j,
                                 lListElem *t,
                                 lList **answer_list,
